--- a/src/main/resources/static/pacientes-lista.html
+++ b/src/main/resources/static/pacientes-lista.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Odontología DH | Alta Odontólogo</title>
+    <title>Odontología DH | Lista Pacientes</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -116,52 +116,138 @@
           <h1>Clínica Odontológica DH</h1>
         </div>
         <div class="row justify-content-center">
-          <div class="form-container col-sm-8">
-            <h3>Agregar un Odontólogo</h3>
-            <form id="add_new_odontologo">
+          <div class="col-sm-10" id="div_odontologo_table">
+            <h3>Pacientes registrados</h3>
+            <div>
+              <p class="update-message">
+                Para modificar un Paciente, haga click sobre el número de ID que
+                quiera actualizar, llene los datos necesarios y confirme la
+                acción.
+              </p>
+              <p class="delete-message">
+                Para eliminar un Paciente, haga click sobre el botón
+                <i>ROJO</i> y confirme la acción.
+              </p>
+            </div>
+            <div class="table-responsive">
+              <table id="paciente-table" class="table table-striped">
+                <thead>
+                  <tr>
+                    <th colspan="5">Datos Personales</th>
+                    <th colspan="4">Domicilio</th>
+                  </tr>
+                  <th>Id</th>
+                  <th>Nombre</th>
+                  <th>Apellido</th>
+                  <th>DNI</th>
+                  <th>Fecha Alta</th>
+                  <th>Calle</th>
+                  <th>Numero</th>
+                  <th>Localidad</th>
+                  <th>Provincia</th>
+                </thead>
+                <tbody id="paciente-table-body"></tbody>
+              </table>
+            </div>
+          </div>
+          <div
+            class="col-sm-8"
+            id="update-form-container"
+            style="
+              display: none;
+              background-color: #e6fffa;
+              padding: 10px;
+              border-radius: 3px;
+            "
+          >
+            <h5>Modificar Paciente</h5>
+            <form id="update_paciente_form">
               <div class="form-group">
-                <label class="control-label" for="nombre">Nombre:</label>
+                <label>Id:</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="nombre"
-                  placeholder="Ingrese el nombre"
-                  name="nombre"
-                  required
+                  id="paciente_id"
+                  readonly
                 />
               </div>
               <div class="form-group">
-                <label class="control-label" for="apellido">Apellido:</label>
+                <label>Nombre:</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="apellido"
-                  placeholder="Ingrese el apellido"
-                  name="apellido"
-                  required
+                  placeholder="nombre"
+                  id="paciente_nombre"
                 />
               </div>
               <div class="form-group">
-                <label class="control-label" for="matricula">Matrícula:</label>
+                <label>Apellido:</label>
                 <input
                   type="text"
                   class="form-control"
-                  id="matricula"
-                  placeholder="Ingrese la matricula"
-                  name="matricula"
-                  required
+                  placeholder="apellido"
+                  id="paciente_apellido"
                 />
               </div>
-
-              <button
-                type="submit"
-                class="btn btn-primary"
-                id="btn-add-new-odontologo"
-              >
-                Guardar odontólogo
-              </button>
+              <div class="form-group">
+                <label>DNI</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="dni"
+                  id="paciente_dni"
+                />
+              </div>
+              <div class="form-group">
+                <label>Fecha Alta</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="fecha_alta"
+                  id="paciente_fecha_alta"
+                />
+              </div>
+              <hr />
+              <h3>Domicilio</h3>
+              <div class="form-group">
+                <label>Calle</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="calle"
+                  id="domicilio_calle"
+                />
+              </div>
+              <div class="form-group">
+                <label>Numero</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="numero"
+                  id="domicilio_numero"
+                />
+              </div>
+              <div class="form-group">
+                <label>Localidad</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="localidad"
+                  id="domicilio_localidad"
+                />
+              </div>
+              <div class="form-group">
+                <label>Provincia</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="provincia"
+                  id="domicilio_provincia"
+                />
+              </div>
+              <button type="submit" class="btn btn-primary">Modificar</button>
             </form>
-            <div id="response" style="display: none; margin-top: 10px"></div>
+            <div id="update-response" style="display: none; margin: 10px"></div>
           </div>
         </div>
       </main>
@@ -171,7 +257,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="/js/sidebar-toggle.js"></script>
-    <script type="module" src="/js/post_odontologo.js"></script>
+    <script src="./js/sidebar-toggle.js"></script>
+    <script src="./js/get_paciente_list.js"></script>
+    <!-- <script src="./js/update_odontologo.js"></script>
+    <script src="./js/delete_by_id.js"></script>
+    <script src="/js/delete_odontologo.js"></script> -->
   </body>
 </html>
