--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
           <button id="sidebar-toggle" class="sidebar-toggle" type="button">
             <i class="lni lni-magnifier toggle-icon"></i>
           </button>
-          <div class="sidebar-logo"><a href="/">Inicios</a></div>
+          <div class="sidebar-logo"><a href="/">Inicio</a></div>
         </div>
         <ul class="sidebar-nav">
           <li class="sidebar-item">
