--- a/src/main/resources/static/pacientes-lista.html
+++ b/src/main/resources/static/pacientes-lista.html
@@ -259,8 +259,8 @@
     ></script>
     <script src="./js/sidebar-toggle.js"></script>
     <script src="./js/get_paciente_list.js"></script>
-    <!-- <script src="./js/update_odontologo.js"></script>
+    <script src="./js/update_paciente.js"></script>
     <script src="./js/delete_by_id.js"></script>
-    <script src="/js/delete_odontologo.js"></script> -->
+    <script src="/js/delete_paciente.js"></script>
   </body>
 </html>
