--- a/src/main/resources/static/pacientes-alta.html
+++ b/src/main/resources/static/pacientes-alta.html
@@ -161,7 +161,7 @@
                   >Fecha de alta:</label
                 >
                 <input
-                  type="text"
+                  type="date"
                   class="form-control"
                   id="paciente_fecha_alta"
                   placeholder="Ingrese la fecha de alta (YYYY-MM-DD)"
