--- a/src/main/resources/static/turnos-alta.html
+++ b/src/main/resources/static/turnos-alta.html
@@ -1,72 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/postTurno.js"></script>
-    <title>Turnos</title>
+  <title>Odontología DH | Alta Paciente</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 </head>
+
 <body>
-    <div class="container">
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Volver</a>
+  <div class="wrapper">
+    <aside id="sidebar" class="sidebar">
+      <div class="d-flex">
+        <button id="sidebar-toggle" class="sidebar-toggle" type="button">
+          <i class="lni lni-more-alt toggle-icon"></i>
+        </button>
+        <div class="sidebar-logo"><a href="/">Inicio</a></div>
+      </div>
+      <ul class="sidebar-nav">
+        <li class="sidebar-item">
+          <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse"
+            data-bs-target="#odontologos" aria-expanded="false" aria-controls="odontologos">
+            <i class="lni lni-user icon"></i>
+            <span>Odontólogos</span>
+          </a>
+          <ul id="odontologos" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+            <li class="sidebar-item">
+              <a href="/odontologos-alta.html" class="sidebar-link">Alta Odontólogo</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./gestionarTurno.html">Gestionar turnos</a>
+            <li class="sidebar-item">
+              <a href="/odontologos-lista.html" class="sidebar-link">Listar Odontólogos</a>
             </li>
-        </ul>
-
-        <div class="row">
-            <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
-
-                <h3>Agregar Turno</h3>
-                <form id="add_new_turno">
-                    <div class="form-group">
-                        <label class="control-label" for="paciente">Paciente:</label>
-                        <input type="text"
-                               class="form-control"
-                               id="paciente"
-                               placeholder="ID del paciente"
-                               name="paciente"
-                               required
-                        />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="odontologo">Odontologo:</label>
-                        <input type="text"
-                               class="form-control"
-                               id="odontologo"
-                               placeholder="ID del odontologo"
-                               name="odontologo"
-                               required
-                        />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label" for="fecha">Fecha:</label>
-                        <input type="text"
-                               class="form-control"
-                               id="fecha"
-                               placeholder="yyyy-mm-dd"
-                               name="fecha"
-                               required
-                        />
-                    </div>
-
-                    <button type="submit"
-                            class="btn btn-danger"
-                            id="btn-add-new-turno">
-                        Guardar
-                    </button>
-                </form>
-                <div id="response" style="display:none; margin-top:10px"></div>
+          </ul>
+        </li>
+        <li class="sidebar-item">
+          <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#pacientes"
+            aria-expanded="false" aria-controls="pacientes">
+            <i class="lni lni-users icon"></i>
+            <span>Pacientes</span>
+          </a>
+          <ul id="pacientes" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+            <li class="sidebar-item">
+              <a href="/pacientes-alta.html" class="sidebar-link">Alta Paciente</a>
+            </li>
+            <li class="sidebar-item">
+              <a href="/pacientes-lista.html" class="sidebar-link">Listar Pacientes</a>
+            </li>
+          </ul>
+        </li>
+        <li class="sidebar-item">
+          <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#turnos"
+            aria-expanded="false" aria-controls="turnos">
+            <i class="lni lni-list icon"></i>
+            <span>Turnos</span>
+          </a>
+          <ul id="turnos" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+            <li class="sidebar-item">
+              <a href="/turnos-alta.html" class="sidebar-link">Alta Turno</a>
+            </li>
+            <li class="sidebar-item">
+              <a href="/turnos-lista.html" class="sidebar-link">Listar Turnos</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </aside>
+    <main class="main">
+      <div class="text-center">
+        <h1>Clínica Odontológica DH</h1>
+      </div>
+      <div class="row justify-content-center">
+        <div class="form-container col-sm-8">
+          <h3>Agregar un Turno</h3>
+          <form id="add_new_turno">
+            <div class="form-group">
+              <label class="control-label" for="paciente_id">Paciente:</label>
+              <select id="paciente_id" class="form-control" name="paciente_id" required>
+                <!-- Options will be populated dynamically -->
+              </select>
             </div>
+            <div class="form-group">
+              <label class="control-label" for="odontologo_id">Odontólogo:</label>
+              <select id="odontologo_id" class="form-control" name="odontologo_id" required>
+                <!-- Options will be populated dynamically -->
+              </select>
+            </div>
+            <div class="form-group">
+              <label class="control-label" for="turno_fecha">Fecha:</label>
+              <input type="date" class="form-control" id="turno_fecha"
+                placeholder="Ingrese la fecha (YYYY-MM-DD)" name="turno_fecha" required />
+            </div>
+            <hr />
+            <button type="submit" class="btn btn-primary" id="btn-add-new-odontologo">
+              Guardar Turno
+            </button>
+          </form>
+          <div id="response" style="display: none; margin-top: 10px"></div>
         </div>
-    </div>
+      </div>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="/js/sidebar-toggle.js"></script>
+  <script type="module" src="./js/post_turno.js"></script>
+  <script type="module" src="./js/dropdown.js"></script>
+
 </body>
+
 </html>
