--- a/src/main/resources/static/odontologos-alta.html
+++ b/src/main/resources/static/odontologos-alta.html
@@ -171,7 +171,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="/js/sidebar-toggle.js"></script>
-    <script type="module" src="/js/post_odontologo.js"></script>
+    <script type="text/javascript" src="./js/sidebar-toggle.js"></script>
+    <script type="module" src="./js/odontologo/post_odontologo.js"></script>
   </body>
 </html>
