--- a/src/main/resources/static/pacientes-alta.html
+++ b/src/main/resources/static/pacientes-alta.html
@@ -241,7 +241,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/sidebar-toggle.js"></script>
-    <script type="module" src="/js/post_paciente.js"></script>
+    <script src="./js/sidebar-toggle.js"></script>
+    <script type="module" src="./js/paciente/post_paciente.js"></script>
   </body>
 </html>
