--- a/src/main/resources/static/pacientes-lista.html
+++ b/src/main/resources/static/pacientes-lista.html
@@ -260,9 +260,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/sidebar-toggle.js"></script>
-    <script src="./js/get_paciente_list.js"></script>
-    <script src="./js/update_paciente.js"></script>
+    <script src="./js/paciente/get_paciente_list.js"></script>
+    <script src="./js/paciente/update_paciente.js"></script>
     <script src="./js/delete_by_id.js"></script>
-    <script src="/js/delete_paciente.js"></script>
+    <script src="./js/paciente/delete_paciente.js"></script>
   </body>
 </html>
