--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -122,6 +122,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/sidebar-toggle.js"></script>
+    <script src="./js/sidebar-toggle.js"></script>
   </body>
 </html>
