--- a/src/main/resources/static/odontologos-lista.html
+++ b/src/main/resources/static/odontologos-lista.html
@@ -205,9 +205,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/sidebar-toggle.js"></script>
-    <script src="./js/get_odontologo_list.js"></script>
-    <script src="./js/update_odontologo.js"></script>
+    <script src="./js/odontologo/get_odontologo_list.js"></script>
+    <script src="./js/odontologo/update_odontologo.js"></script>
     <script src="./js/delete_by_id.js"></script>
-    <script src="/js/delete_odontologo.js"></script>
+    <script src="./js/odontologo/delete_odontologo.js"></script>
   </body>
 </html>
