--- a/src/main/resources/static/turnos-alta.html
+++ b/src/main/resources/static/turnos-alta.html
@@ -107,9 +107,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script src="/js/sidebar-toggle.js"></script>
-  <script type="module" src="./js/post_turno.js"></script>
-  <script type="module" src="./js/dropdown.js"></script>
+  <script src="./js/sidebar-toggle.js"></script>
+  <script type="module" src="./js/turno/post_turno.js"></script>
+  <script type="module" src="./js/turno/dropdown.js"></script>
 
 </body>
 
