--- a/src/main/resources/static/turnos-alta.html
+++ b/src/main/resources/static/turnos-alta.html
@@ -107,6 +107,7 @@
     crossorigin="anonymous"></script>
   <script src="./js/sidebar-toggle.js"></script>
   <script type="module" src="./js/turno/post_turno.js"></script>
+  <script type="module" src="./js/turno/dropdown.js"></script>
 
 </body>
 
