--- a/src/main/resources/static/turnos-alta.html
+++ b/src/main/resources/static/turnos-alta.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Odontología DH | Alta Paciente</title>
+  <title>Odontología DH | Alta Turno</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
