--- a/src/main/resources/static/turnos-alta.html
+++ b/src/main/resources/static/turnos-alta.html
@@ -92,6 +92,11 @@
               <input type="date" class="form-control" id="turno_fecha"
                 placeholder="Ingrese la fecha (YYYY-MM-DD)" name="turno_fecha" required />
             </div>
+            <div class="form-group">
+              <label class="control-label" for="turno_hora">Hora:</label>
+              <input type="time" class="form-control" id="turno_hora"
+                placeholder="Ingrese la hora (HH:MM)" name="turno_hora" required />
+            </div>
             <hr />
             <button type="submit" class="btn btn-primary" id="btn-add-new-odontologo">
               Guardar Turno
