--- a/src/main/resources/static/turnos-lista.html
+++ b/src/main/resources/static/turnos-lista.html
@@ -17,7 +17,7 @@
     <aside id="sidebar" class="sidebar">
       <div class="d-flex">
         <button id="sidebar-toggle" class="sidebar-toggle" type="button">
-          <i class="lni lni-more-alt toggle-icon"></i>
+          <i class="lni lni-magnifier toggle-icon"></i>
         </button>
         <div class="sidebar-logo"><a href="/">Inicio</a></div>
       </div>
