Actualización index.html y estilos para la vista del Home

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -112,17 +112,16 @@
         </ul>
       </aside>
       <main class="main">
-        <div class="container main-content">
-          <div class="row main-img__container">
+        <div class="container align-content-center main-content">
+          <div class="row">
             <div class="col-md-6">
               <div class="main-header">
                 <h1 class="main-title">
-                  Odontología <br /><span class="main-title__span">DH</span>
+                  Odontología <span class="main-title__span">DH</span>
                 </h1>
-                <h3>Proyecto integrador final Backend I</h3>
+                <h3>Proyecto Final Integrador Backend I</h3>
                 <p>
-                  Este proyecto fue realizado por los alumnos de Digital House
-                  para el curso de Backend I.
+                  Realizado por los alumnos de Digital House:
                 </p>
               </div>
               <div class="main-cards">
@@ -134,8 +133,7 @@
                           <i class="lni lni-rocket"></i>Danna Marin
                         </h4>
                         <p class="card-text">
-                          With supporting text below as a natural lead-in to
-                          additional content.
+                          Soy estudiante en Digital House, donde estoy aprendiendo y desarrollando habilidades en tecnología y programación para avanzar en mi carrera en el mundo digital.
                         </p>
                         <a
                           href="https://github.com/Dasomacha"
@@ -154,8 +152,7 @@
                           <i class="lni lni-code-alt"></i>Israel E. Porfirio
                         </h4>
                         <p class="card-text">
-                          With supporting text below as a natural lead-in to
-                          additional content.
+                          Desarrollador web autónomo. <i>Con la programación y el desarrollo web se pueden crear cosas emocionantes</i>. Infinitas gracias profe <b>Vanina Godoy</b> y a DigitalHouse.
                         </p>
                         <a
                           href="https://github.com/iseddev"
@@ -170,7 +167,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 align-content-center">
+            <div class="col-md-6 align-content-center main-img__container">
               <img src="./img/medicine.svg" alt="Clínica Odontológica DH" />
             </div>
           </div>
